--- a/index.html
+++ b/index.html
@@ -78,23 +78,23 @@
     </nav>
     <section id="murad">Murad
         <img src="murad.png" alt="" height="350px" width="350px">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, ullam.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
     </section>
     <section id="gunes">Gunes
         <img src="gunes.png" alt="" height="350px" width="350px">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, quod.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </section>
     <section id="ali">Ali
         <img src="ali.png" alt="" height="350px" width="350px">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam, nihil?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
     </section>
     <section id="leman">Leman
         <img src="leman.png" alt="" height="350px" width="350px">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed, molestias?
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
     </section>
     <section id="kevin">Kevin
         <img src="kevin.png" alt="" height="350px" width="350px">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, eius!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </section>
 
 
