design by murad

--- a/index.html
+++ b/index.html
@@ -14,35 +14,16 @@
             font-size: 35px;
         }
 
-        #murad {
-            background-color: blue;
-        }
-
-        #gunes {
-            background-color: red;
-        }
-
-        #ali {
-            background-color: green;
-        }
-
-        #leman {
-            background-color: purple;
-        }
-
-        #kevin {
-            background-color: aqua;
-        }
-
         img {
             padding: 20px;
         }
+       
     </style>
 </head>
 
 <body>
 
-    <nav class="navbar bg-success navbar-warning navbar-expand-sm">
+    <nav class="navbar bg-dark navbar-dark navbar-expand-sm">
         <div class="container">
             <a href="#" class="navbar-brand">
                 <img src="hmw.png" alt="logo">
